- bios/vectors.S: Fixed return value of unimplemented (X)BIOS functions. (VRI)
- aes/gemdos.c aes/gemdos.h aes/geminit.c desk/deskbind.h desk/deskdir.c:
  Allow dos_read()/dos_write() to transfer >64K. (RFB)
- desk/deskbind.h desk/deskdir.c: Improve desktop file copy performance. (RFB)
- tools/bug.c: Generate warning messages for illegal alerts (disabled
  initially). Contributed by Eero Tamminen. (RFB)

2013-03-06
- bios/blkdev.c bios/blkdev.h bdos/fs.h bdos/fsdrive.c: Static cleanup. (RFB)
- bdos/fsmain.c bdos/fsopnclo.c: Added some clarification comments. (RFB)

2013-03-07
- aes/gemctrl.c aes/gemgsxif.c aes/geminit.c aes/geminit.h: Code cleanup:
  use MFORM for mouse form instead of array of WORDs. (RFB)
- aes/gemgsxif.c aes/gemsuper.c include/compat.h: Code cleanup: eliminate
  LWCOPY macro. (RFB)
- bios/memory.S: Do not clear the FastRAM anymore, to improve boot speed. (VRI)
- aes/gemaplib.c aes/gemdisp.c aes/geminit.c aes/geminput.c aes/gemoblib.c
  aes/gemqueue.c aes/gemshlib.c desk/deskapp.c desk/deskinf.c
  include/compat.h: Code cleanup: eliminate LBCOPY macro. (RFB)
- util/memmove.S: Improve memcpy() speed for small lengths. (RFB)
- bdos/fs.h bdos/fsopnclo.c: Remove some duplicate #defines. (RFB)

2013-03-08
- bios/blkdev.c bios/blkdev.h: Static cleanup. (RFB)

2013-03-09
- cli/command.c: Fix occasional crash in CLI rename command. (RFB)
- include/config.h aes/gemdisof.S aes/gemsuper.c aes/struct.h: Added
  CONF_DEBUG_AES_STACK to debug and estimate the AES stack usage. (VRI)
- aes/struct.h: Increased STACK_SIZE to allow running XaAES with GEM=ROM. (VRI)
- desk/deskmain.c desk/desksupp.c desk/desktop.def desk/desktop.rsc:
  Remove unnecessary info dialog for "New folder" (present in all ROMs
  but only used in 192K). (RFB)

2013-03-11
- aes/geminit.c: Fix divide-by-zero when ev_dclick() is called before
  gl_ticktime is initialised. (RFB)

2013-03-12
- bios/dmasound.c: Added remaining Soundcmd() functionality for Falcon. (THH)