@@ -4553,3 +4553,4 @@ Start... early ages
 
 2013-03-12
 - bios/dmasound.c: Added remaining Soundcmd() functionality for Falcon. (THH)
+- bios/bios.c: Panic instead of endless loop on zero divide on ColdFire. (VRI)
